@@ -1,12 +1,11 @@
 package com.example.rental.service.impl;
 
-import com.example.rental.config.VNPayConfig;
 import com.example.rental.domain.InvoiceStatus;
 import com.example.rental.domain.PaymentMethod;
 import com.example.rental.domain.PaymentStatus;
-import com.example.rental.domain.WaterCalculationType;
 import com.example.rental.dto.InvoiceRequest;
 import com.example.rental.dto.InvoiceServiceItemRequest;
+import com.example.rental.config.VNPayConfig;
 import com.example.rental.model.Contract;
 import com.example.rental.model.Invoice;
 import com.example.rental.model.InvoiceServiceItem;
@@ -17,13 +16,13 @@ import com.example.rental.model.User;
 import com.example.rental.repository.ContractRepository;
 import com.example.rental.repository.InvoiceRepository;
 import com.example.rental.repository.InvoiceServiceItemRepository;
-import com.example.rental.repository.RoomRepository;
-import com.example.rental.repository.TenantRepository;
 import com.example.rental.repository.TransactionRepository;
-import com.example.rental.service.EmailService;
+import com.example.rental.service.EmailTemplateService;
 import com.example.rental.service.InvoiceService;
 import com.example.rental.service.NotificationService;
-import jakarta.mail.MessagingException;
+import com.example.rental.service.SystemSettingService;
+import com.example.rental.service.UserService;
+import com.example.rental.service.utils.InvoicePricingEngine;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -31,12 +30,14 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.text.NumberFormat;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Locale;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -46,16 +47,19 @@ public class InvoiceServiceImpl implements InvoiceService {
     private final InvoiceRepository invoiceRepository;
     private final ContractRepository contractRepository;
     private final InvoiceServiceItemRepository invoiceServiceItemRepository;
-    private final TenantRepository tenantRepository;
-    private final RoomRepository roomRepository;
     private final TransactionRepository transactionRepository;
-    private final EmailService emailService;
-    private final VNPayConfig vnPayConfig;
+    private final UserService userService;
     private final NotificationService notificationService;
+    private final SystemSettingService systemSettingService;
+    private final EmailTemplateService emailTemplateService;
+    private final VNPayConfig vnPayConfig;
 
     private static final DateTimeFormatter MONTH_FMT = DateTimeFormatter.ofPattern("MM/yyyy");
     private static final DateTimeFormatter DATE_FMT = DateTimeFormatter.ofPattern("dd/MM/yyyy");
-    private static final NumberFormat MONEY_FMT = NumberFormat.getInstance(new Locale("vi", "VN"));
+
+    // ====================================================================
+    //  Create
+    // ====================================================================
 
     @Override
     @Transactional
@@ -69,41 +73,74 @@ public class InvoiceServiceImpl implements InvoiceService {
         Contract contract = contractRepository.findById(req.getMaHopDong())
                 .orElseThrow(() -> new Exception("Khong tim thay hop dong voi id " + req.getMaHopDong()));
 
-        long count = invoiceRepository.count();
-        String maHoaDon = "HD" + String.format("%03d", count + 1);
+        Invoice previous = findLatestByHopDongId(contract.getId());
 
-        BigDecimal tongTien = req.getTongTien() != null
-                ? req.getTongTien()
-                : computeTotal(contract, req);
-
+        // Build the invoice header
         Invoice invoice = new Invoice();
-        invoice.setMaHoaDon(maHoaDon);
+        invoice.setMaHoaDon(generateMaHoaDon());
         invoice.setHopDong(contract);
         invoice.setKyHoaDon(req.getKyHoaDon());
-        invoice.setChiSoDienCu(req.getChiSoDienCu());
+
+        // Electric
+        invoice.setChiSoDienCu(
+                req.getChiSoDienCu() != null
+                        ? req.getChiSoDienCu()
+                        : (previous != null ? previous.getChiSoDienMoi() : null));
         invoice.setChiSoDienMoi(req.getChiSoDienMoi());
-        invoice.setGiaDien(req.getGiaDien());
-        invoice.setChiSoNuocCu(req.getChiSoNuocCu());
+        invoice.setGiaDien(InvoicePricingEngine.resolveElectricPrice(contract, previous, req));
+
+        // Water
+        invoice.setChiSoNuocCu(
+                req.getChiSoNuocCu() != null
+                        ? req.getChiSoNuocCu()
+                        : (previous != null ? previous.getChiSoNuocMoi() : null));
         invoice.setChiSoNuocMoi(req.getChiSoNuocMoi());
-        invoice.setGiaNuoc(req.getGiaNuoc());
-        if (req.getKieuTinhNuoc() != null) {
-            invoice.setKieuTinhNuoc(req.getKieuTinhNuoc());
-        }
-        invoice.setTienPhong(req.getTienPhong());
-        invoice.setTongTien(tongTien);
-        invoice.setHanThanhToan(req.getHanThanhToan());
+        invoice.setGiaNuoc(InvoicePricingEngine.resolveWaterPrice(contract, previous, req));
+        invoice.setKieuTinhNuoc(InvoicePricingEngine.resolveWaterCalc(contract, previous, req));
+
+        // Room
+        invoice.setTienPhong(
+                req.getTienPhong() != null
+                        ? req.getTienPhong()
+                        : InvoicePricingEngine.resolveRoomPrice(contract, previous));
+
+        // Meta
+        invoice.setHanThanhToan(req.getHanThanhToan() != null
+                ? req.getHanThanhToan()
+                : calculateDefaultDueDate(req.getKyHoaDon()));
         invoice.setTrangThai(InvoiceStatus.CHUA_THANH_TOAN);
+        invoice.setPhiPhat(req.getPhiPhat() != null ? req.getPhiPhat() : BigDecimal.ZERO);
         invoice.setGhiChu(req.getGhiChu());
         invoice.setNguoiTao(nguoiTao);
         invoice.setNgayTao(LocalDateTime.now());
         invoice.setNgaySua(LocalDateTime.now());
 
+        // Persist header first (needed for FK in line items)
         Invoice saved = invoiceRepository.save(invoice);
-        syncServiceItems(saved, req.getDanhSachDichVu());
-        sendInvoiceNotification(saved);
-        notificationService.notifyInvoiceCreated(nguoiTao, saved.getId());
-        return saved;
+
+        // Build all line items from the engine (single source of truth)
+        syncServiceItems(saved, buildItemRequests(saved, req, contract, previous));
+
+        // Set total = sum of thanhTien + phiPhat
+        saved.setTongTien(InvoicePricingEngine.computeTotal(saved));
+        // Auto-calculate late penalty if past due date
+        if (saved.getHanThanhToan() != null && saved.getHanThanhToan().isBefore(java.time.LocalDate.now())) {
+            BigDecimal penaltyPct = systemSettingService.getLatePenaltyPercent();
+            BigDecimal phiPhat = saved.getTongTien().multiply(penaltyPct)
+                    .divide(new BigDecimal("100"), 0, java.math.RoundingMode.HALF_UP);
+            saved.setPhiPhat(phiPhat);
+            saved.setTongTien(saved.getTongTien().add(phiPhat));
+        }
+        Invoice result = invoiceRepository.save(saved);
+
+        sendInvoiceNotification(result);
+        notificationService.notifyInvoiceCreated(nguoiTao, result.getId());
+        return result;
     }
+
+    // ====================================================================
+    //  Update
+    // ====================================================================
 
     @Override
     @Transactional
@@ -120,55 +157,89 @@ public class InvoiceServiceImpl implements InvoiceService {
             throw new Exception("Hoa don da thanh toan, khong the cap nhat");
         }
 
-        if (req.getKyHoaDon() != null) {
-            invoice.setKyHoaDon(req.getKyHoaDon());
-        }
-        if (req.getChiSoDienCu() != null) {
-            invoice.setChiSoDienCu(req.getChiSoDienCu());
-        }
-        if (req.getChiSoDienMoi() != null) {
-            invoice.setChiSoDienMoi(req.getChiSoDienMoi());
-        }
-        if (req.getGiaDien() != null) {
-            invoice.setGiaDien(req.getGiaDien());
-        }
-        if (req.getChiSoNuocCu() != null) {
-            invoice.setChiSoNuocCu(req.getChiSoNuocCu());
-        }
-        if (req.getChiSoNuocMoi() != null) {
-            invoice.setChiSoNuocMoi(req.getChiSoNuocMoi());
-        }
-        if (req.getGiaNuoc() != null) {
-            invoice.setGiaNuoc(req.getGiaNuoc());
-        }
-        if (req.getKieuTinhNuoc() != null) {
-            invoice.setKieuTinhNuoc(req.getKieuTinhNuoc());
-        }
-        if (req.getTienPhong() != null) {
-            invoice.setTienPhong(req.getTienPhong());
-        }
         Contract contract = invoice.getHopDong();
-        if (req.getTongTien() != null) {
-            invoice.setTongTien(req.getTongTien());
-        } else {
-            invoice.setTongTien(computeTotal(contract, req));
-        }
-        if (req.getHanThanhToan() != null) {
-            invoice.setHanThanhToan(req.getHanThanhToan());
-        }
-        if (req.getTrangThai() != null) {
-            invoice.setTrangThai(req.getTrangThai());
-        }
-        if (req.getGhiChu() != null) {
-            invoice.setGhiChu(req.getGhiChu());
-        }
+        // Find the latest invoice before this one (not including itself) to get correct meter readings
+        Invoice previous = invoiceRepository.findAll().stream()
+                .filter(i -> i.getHopDong() != null
+                        && i.getHopDong().getId().equals(contract.getId())
+                        && i.getId() != null && !i.getId().equals(id)
+                        && i.getKyHoaDon() != null)
+                .max((a, b) -> {
+                    if (a.getKyHoaDon() == null && b.getKyHoaDon() == null) return 0;
+                    if (a.getKyHoaDon() == null) return -1;
+                    if (b.getKyHoaDon() == null) return 1;
+                    return b.getKyHoaDon().compareTo(a.getKyHoaDon());
+                })
+                .orElse(null);
+
+        // Update header fields
+        if (req.getKyHoaDon() != null) invoice.setKyHoaDon(req.getKyHoaDon());
+
+        invoice.setChiSoDienCu(req.getChiSoDienCu() != null ? req.getChiSoDienCu() : invoice.getChiSoDienCu());
+        invoice.setChiSoDienMoi(req.getChiSoDienMoi() != null ? req.getChiSoDienMoi() : invoice.getChiSoDienMoi());
+        invoice.setGiaDien(InvoicePricingEngine.resolveElectricPrice(contract, previous, req));
+
+        invoice.setChiSoNuocCu(req.getChiSoNuocCu() != null ? req.getChiSoNuocCu() : invoice.getChiSoNuocCu());
+        invoice.setChiSoNuocMoi(req.getChiSoNuocMoi() != null ? req.getChiSoNuocMoi() : invoice.getChiSoNuocMoi());
+        invoice.setGiaNuoc(InvoicePricingEngine.resolveWaterPrice(contract, previous, req));
+        invoice.setKieuTinhNuoc(InvoicePricingEngine.resolveWaterCalc(contract, previous, req));
+
+        invoice.setTienPhong(req.getTienPhong() != null
+                ? req.getTienPhong()
+                : InvoicePricingEngine.resolveRoomPrice(contract, previous));
+
+        if (req.getHanThanhToan() != null) invoice.setHanThanhToan(req.getHanThanhToan());
+        if (req.getTrangThai() != null) invoice.setTrangThai(req.getTrangThai());
+        if (req.getPhiPhat() != null) invoice.setPhiPhat(req.getPhiPhat());
+        if (req.getGhiChu() != null) invoice.setGhiChu(req.getGhiChu());
         invoice.setNgaySua(LocalDateTime.now());
 
+        // Persist updated header
         Invoice saved = invoiceRepository.save(invoice);
-        if (req.getDanhSachDichVu() != null) {
-            syncServiceItems(saved, req.getDanhSachDichVu());
+
+        // Rebuild all line items from the engine (single source of truth)
+        syncServiceItems(saved, buildItemRequests(saved, req, contract, previous));
+
+        // Recompute total
+        saved.setTongTien(InvoicePricingEngine.computeTotal(saved));
+        // Auto-calculate late penalty if past due date
+        if (saved.getHanThanhToan() != null && saved.getHanThanhToan().isBefore(java.time.LocalDate.now())) {
+            BigDecimal penaltyPct = systemSettingService.getLatePenaltyPercent();
+            BigDecimal phiPhat = saved.getTongTien().multiply(penaltyPct)
+                    .divide(new BigDecimal("100"), 0, java.math.RoundingMode.HALF_UP);
+            saved.setPhiPhat(phiPhat);
+            saved.setTongTien(saved.getTongTien().add(phiPhat));
         }
-        return saved;
+        return invoiceRepository.save(saved);
+    }
+
+    // ====================================================================
+    //  Sync line items
+    // ====================================================================
+
+    /**
+     * Converts {@link InvoiceServiceItem} entities from the engine into
+     * {@link InvoiceServiceItemRequest} DTOs, then persists them.
+     */
+    private List<InvoiceServiceItemRequest> buildItemRequests(Invoice invoice,
+                                                              InvoiceRequest req,
+                                                              Contract contract,
+                                                              Invoice previous) {
+        List<InvoiceServiceItemRequest> requests = new ArrayList<>();
+        for (InvoiceServiceItem it : InvoicePricingEngine.buildItems(invoice, req, contract, previous)) {
+            InvoiceServiceItemRequest r = new InvoiceServiceItemRequest();
+            r.setTenDichVu(it.getTenDichVu());
+            r.setKieuTinh(it.getKieuTinh());
+            r.setSoLuong(it.getSoLuong());
+            r.setDonGia(it.getDonGia());
+            r.setThanhTien(it.getThanhTien());
+            r.setLaTuHopDong(it.getLaTuHopDong());
+            r.setLoaiDichVu(it.getLoaiDichVu());
+            r.setChiSoDau(it.getChiSoDau());
+            r.setChiSoCuoi(it.getChiSoCuoi());
+            requests.add(r);
+        }
+        return requests;
     }
 
     private void syncServiceItems(Invoice invoice, List<InvoiceServiceItemRequest> requests) {
@@ -182,38 +253,47 @@ public class InvoiceServiceImpl implements InvoiceService {
             }
             BigDecimal soLuong = req.getSoLuong() != null ? req.getSoLuong() : BigDecimal.ONE;
             BigDecimal donGia = req.getDonGia() != null ? req.getDonGia() : BigDecimal.ZERO;
-            BigDecimal thanhTien = soLuong.multiply(donGia).setScale(0, RoundingMode.HALF_UP);
+            // Accept thanhTien from request (pre-computed by engine); compute if missing.
+            BigDecimal thanhTien = req.getThanhTien();
+            if (thanhTien == null) {
+                thanhTien = soLuong.multiply(donGia).setScale(0, java.math.RoundingMode.HALF_UP);
+            }
 
             InvoiceServiceItem item = new InvoiceServiceItem();
             item.setHoaDon(invoice);
             item.setTenDichVu(req.getTenDichVu());
-            item.setKieuTinh(req.getKieuTinh() != null ? req.getKieuTinh() : "Theo phong");
+            item.setKieuTinh(req.getKieuTinh() != null ? req.getKieuTinh() : "Theo phòng");
             item.setSoLuong(soLuong);
             item.setDonGia(donGia);
             item.setThanhTien(thanhTien);
             item.setLaTuHopDong(req.getLaTuHopDong() == null ? Boolean.TRUE : req.getLaTuHopDong());
+            item.setLoaiDichVu(req.getLoaiDichVu() != null ? req.getLoaiDichVu() : InvoicePricingEngine.LOAI_DICH_VU);
+            item.setChiSoDau(req.getChiSoDau());
+            item.setChiSoCuoi(req.getChiSoCuoi());
             invoice.getDanhSachDichVu().add(item);
         }
         invoiceServiceItemRepository.saveAll(invoice.getDanhSachDichVu());
     }
 
-    @Override
-    @Transactional
-    public void deleteInvoice(Long id) throws Exception {
-        Invoice invoice = findById(id);
-
-        if (invoice.getTrangThai() != InvoiceStatus.CHUA_THANH_TOAN) {
-            throw new Exception("Hoa don da thanh toan, khong the xoa");
-        }
-
-        invoiceServiceItemRepository.deleteByHoaDonId(invoice.getId());
-        invoiceRepository.delete(invoice);
-    }
+    // ====================================================================
+    //  Query
+    // ====================================================================
 
     @Override
     public Invoice findById(Long id) throws Exception {
-        return invoiceRepository.findById(id)
+        return findById(id, null);
+    }
+
+    @Override
+    public Invoice findById(Long id, User currentUser) throws Exception {
+        Invoice invoice = invoiceRepository.findById(id)
                 .orElseThrow(() -> new Exception("Khong tim thay hoa don voi id " + id));
+        if (currentUser != null && !userService.isAdmin(currentUser)) {
+            if (!userService.canAccessInvoice(currentUser, id)) {
+                throw new Exception("Ban khong co quyen truy cap hoa don nay");
+            }
+        }
+        return invoice;
     }
 
     @Override
@@ -231,11 +311,17 @@ public class InvoiceServiceImpl implements InvoiceService {
     }
 
     @Override
-    public List<Invoice> findByHopDongId(Long hopDongId) {
-        List<Invoice> all = invoiceRepository.findAll();
-        return all.stream()
-                .filter(i -> i.getHopDong() != null && i.getHopDong().getId().equals(hopDongId))
-                .collect(Collectors.toList());
+    public List<Invoice> findAll(User currentUser) {
+        if (currentUser == null || userService.isAdmin(currentUser)) {
+            return findAll();
+        }
+        Set<Long> allowedMotelIds = userService.getAssignedMotelIds(currentUser);
+        return invoiceRepository.findAll().stream()
+                .filter(i -> i.getHopDong() != null
+                        && i.getHopDong().getPhongTro() != null
+                        && i.getHopDong().getPhongTro().getNhaTro() != null
+                        && allowedMotelIds.contains(i.getHopDong().getPhongTro().getNhaTro().getId()))
+                .toList();
     }
 
     @Override
@@ -244,57 +330,50 @@ public class InvoiceServiceImpl implements InvoiceService {
     }
 
     @Override
-    public List<Invoice> search(String keyword, InvoiceStatus trangThai) {
-        List<Invoice> invoices = invoiceRepository.findAll();
-        return invoices.stream()
-                .filter(i -> keyword == null || keyword.isBlank()
-                        || (i.getMaHoaDon() != null && i.getMaHoaDon().toLowerCase().contains(keyword.toLowerCase())))
-                .filter(i -> trangThai == null || i.getTrangThai() == trangThai)
-                .collect(Collectors.toList());
+    public List<Invoice> findByTrangThai(InvoiceStatus trangThai, User currentUser) {
+        return findAll(currentUser).stream()
+                .filter(i -> i.getTrangThai() == trangThai)
+                .toList();
     }
 
     @Override
-    @Transactional
+    public List<Invoice> search(String keyword, InvoiceStatus trangThai) {
+        return search(keyword, trangThai, null);
+    }
+
+    @Override
+    public List<Invoice> search(String keyword, InvoiceStatus trangThai, User currentUser) {
+        List<Invoice> all = findAll(currentUser);
+        if (trangThai != null) {
+            all = all.stream().filter(i -> i.getTrangThai() == trangThai).toList();
+        }
+        if (keyword == null || keyword.isBlank()) return all;
+        String kw = keyword.toLowerCase();
+        return all.stream().filter(i -> {
+            if (i.getMaHoaDon() != null && i.getMaHoaDon().toLowerCase().contains(kw)) return true;
+            if (i.getHopDong() != null && i.getHopDong().getKhachThue() != null
+                    && i.getHopDong().getKhachThue().getHoTen() != null
+                    && i.getHopDong().getKhachThue().getHoTen().toLowerCase().contains(kw)) return true;
+            return false;
+        }).toList();
+    }
+
+    @Override
     public Invoice markAsPaid(Long id) throws Exception {
         return markAsPaid(id, null);
     }
 
     @Override
-    @Transactional
-    public Invoice markAsPaid(Long id, User nguoiThanhToan) throws Exception {
-        Invoice invoice = findById(id);
-        if (invoice.getTrangThai() == InvoiceStatus.DA_THANH_TOAN) {
-            throw new Exception("Hoa don da duoc thanh toan truoc do");
-        }
-
-        boolean hasExistingCash = transactionRepository.findByHoaDonId(invoice.getId()).stream()
-                .anyMatch(t -> t.getHinhThucTT() == PaymentMethod.TIEN_MAT);
-        if (!hasExistingCash) {
-            Transaction tx = new Transaction();
-            tx.setMaGiaoDich(generateMaGiaoDich());
-            tx.setHoaDon(invoice);
-            tx.setSoTien(invoice.getTongTien() != null ? invoice.getTongTien() : BigDecimal.ZERO);
-            tx.setHinhThucTT(PaymentMethod.TIEN_MAT);
-            tx.setMaCongTT("CASH");
-            tx.setTrangThai(PaymentStatus.THANH_CONG);
-            LocalDateTime now = LocalDateTime.now();
-            tx.setNgayThanhToan(now);
-            tx.setNgayTao(now);
-            tx.setGhiChu("Thu tien mat hoa don " + invoice.getMaHoaDon());
-            transactionRepository.save(tx);
-        }
-
-        invoice.setTrangThai(InvoiceStatus.DA_THANH_TOAN);
-        invoice.setNgaySua(LocalDateTime.now());
-        Invoice saved = invoiceRepository.save(invoice);
-        notificationService.notifyInvoicePaid(nguoiThanhToan, saved.getId(), "tien mat");
-        return saved;
+    public List<Invoice> findByHopDongId(Long hopDongId) {
+        return findByHopDongId(hopDongId, null);
     }
 
-    private String generateMaGiaoDich() {
-        long count = transactionRepository.count() + 1;
-        return "GD" + LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyMMdd"))
-                + String.format("%04d", count);
+    @Override
+    public List<Invoice> findByHopDongId(Long hopDongId, User currentUser) {
+        List<Invoice> all = findAll(currentUser);
+        return all.stream()
+                .filter(i -> i.getHopDong() != null && i.getHopDong().getId().equals(hopDongId))
+                .toList();
     }
 
     @Override
@@ -306,155 +385,194 @@ public class InvoiceServiceImpl implements InvoiceService {
                     if (a.getKyHoaDon() == null && b.getKyHoaDon() == null) return 0;
                     if (a.getKyHoaDon() == null) return -1;
                     if (b.getKyHoaDon() == null) return 1;
-                    return a.getKyHoaDon().compareTo(b.getKyHoaDon());
+                    return b.getKyHoaDon().compareTo(a.getKyHoaDon());
                 })
                 .orElse(null);
     }
 
+    @Override
+    @Transactional
+    public Invoice markAsPaid(Long id, User nguoiThanhToan) throws Exception {
+        Invoice invoice = findById(id);
+        if (invoice.getTrangThai() == InvoiceStatus.DA_THANH_TOAN) {
+            throw new Exception("Hoa don da duoc thanh toan");
+        }
+        invoice.setTrangThai(InvoiceStatus.DA_THANH_TOAN);
+        invoice.setNgaySua(LocalDateTime.now());
+
+        Transaction transaction = new Transaction();
+        transaction.setMaGiaoDich("TM-" + invoice.getMaHoaDon() + "-" + System.currentTimeMillis());
+        transaction.setHoaDon(invoice);
+        transaction.setSoTien(invoice.getTongTien() != null ? invoice.getTongTien() : BigDecimal.ZERO);
+        transaction.setHinhThucTT(PaymentMethod.TIEN_MAT);
+        transaction.setTrangThai(PaymentStatus.THANH_CONG);
+        transaction.setNgayThanhToan(LocalDateTime.now());
+        transaction.setNgayTao(LocalDateTime.now());
+        transaction.setGhiChu("Thanh toan tien mat hoa don " + invoice.getMaHoaDon());
+        transactionRepository.save(transaction);
+        log.info("[markAsPaid] Tao giao dich tien mat {} cho hoa don {}", transaction.getMaGiaoDich(), invoice.getMaHoaDon());
+
+        notificationService.notifyInvoicePaid(nguoiThanhToan, invoice.getId(), "TIEN_MAT");
+        return invoiceRepository.save(invoice);
+    }
+
+    @Override
+    @Transactional
+    public void deleteInvoice(Long id) throws Exception {
+        deleteInvoice(id, null);
+    }
+
+    @Override
+    @Transactional
+    public void deleteInvoice(Long id, User currentUser) throws Exception {
+        Invoice invoice = findById(id, currentUser);
+        if (invoice.getTrangThai() == InvoiceStatus.DA_THANH_TOAN) {
+            throw new Exception("Hoa don da thanh toan, khong the xoa");
+        }
+        invoiceRepository.delete(invoice);
+    }
+
+    @Override
     public BigDecimal computeElectricAmount(Contract contract, InvoiceRequest req) {
-        if (req.getChiSoDienMoi() == null || req.getChiSoDienCu() == null || req.getGiaDien() == null) {
-            return BigDecimal.ZERO;
-        }
-        int diff = Math.max(req.getChiSoDienMoi() - req.getChiSoDienCu(), 0);
-        return req.getGiaDien().multiply(BigDecimal.valueOf(diff));
+        return InvoicePricingEngine.computeElectric(req, contract);
     }
 
+    @Override
     public BigDecimal computeWaterAmount(Contract contract, InvoiceRequest req) {
-        if (req.getGiaNuoc() == null) return BigDecimal.ZERO;
-        WaterCalculationType type = req.getKieuTinhNuoc() != null
-                ? req.getKieuTinhNuoc()
-                : (contract != null ? WaterCalculationType.CHI_SO : WaterCalculationType.CHI_SO);
-        return switch (type) {
-            case THEO_PHONG -> req.getGiaNuoc();
-            case THEO_NGUOI -> {
-                int people = countPeopleInRoom(contract);
-                yield req.getGiaNuoc().multiply(BigDecimal.valueOf(Math.max(people, 1)));
-            }
-            case CHI_SO -> {
-                if (req.getChiSoNuocMoi() == null || req.getChiSoNuocCu() == null) {
-                    yield BigDecimal.ZERO;
-                }
-                int diff = Math.max(req.getChiSoNuocMoi() - req.getChiSoNuocCu(), 0);
-                yield req.getGiaNuoc().multiply(BigDecimal.valueOf(diff));
-            }
-        };
+        return InvoicePricingEngine.computeWater(req, contract);
     }
 
-    private int countPeopleInRoom(Contract contract) {
-        if (contract == null || contract.getPhongTro() == null) return 1;
-        Room room = contract.getPhongTro();
-        int count = 0;
-        try {
-            if (room.getSoNguoi() != null && room.getSoNguoi() > 0) {
-                count = room.getSoNguoi();
-            }
-        } catch (Exception ignored) {
-        }
-        if (count == 0) {
-            Tenant tenant = contract.getKhachThue();
-            if (tenant != null) {
-                int roommates = tenant.getDanhSachNguoiOCung() != null ? tenant.getDanhSachNguoiOCung().size() : 0;
-                count = 1 + roommates;
-            }
-        }
-        return Math.max(count, 1);
-    }
-
+    @Override
     public BigDecimal computeServiceAmount(InvoiceRequest req) {
-        if (req.getDanhSachDichVu() == null || req.getDanhSachDichVu().isEmpty()) {
-            return BigDecimal.ZERO;
-        }
-        BigDecimal total = BigDecimal.ZERO;
-        for (InvoiceServiceItemRequest item : req.getDanhSachDichVu()) {
-            if (item.getDonGia() == null) continue;
-            BigDecimal soLuong = item.getSoLuong() != null ? item.getSoLuong() : BigDecimal.ONE;
-            total = total.add(item.getDonGia().multiply(soLuong));
-        }
-        return total;
+        return InvoicePricingEngine.computeServices(req);
     }
 
+    @Override
     public BigDecimal computeTotal(Contract contract, InvoiceRequest req) {
-        BigDecimal tong = BigDecimal.ZERO;
-        if (req.getTienPhong() != null) {
-            tong = tong.add(req.getTienPhong());
-        }
-        tong = tong.add(computeElectricAmount(contract, req));
-        tong = tong.add(computeWaterAmount(contract, req));
-        tong = tong.add(computeServiceAmount(req));
-        return tong;
+        // For pre-save estimation only — actual total comes from InvoicePricingEngine.computeTotal
+        return InvoicePricingEngine.computeTotal(new Invoice(), req, contract);
     }
 
+    @Override
+    @Transactional(readOnly = true)
     public int countPeopleByRoomId(Long roomId) {
         if (roomId == null) return 1;
-        try {
-            Room room = roomRepository.findById(roomId).orElse(null);
-            if (room == null) return 1;
-            if (room.getSoNguoi() != null && room.getSoNguoi() > 0) {
-                return room.getSoNguoi();
-            }
-        } catch (Exception ignored) {
+        List<Contract> active = contractRepository.findByPhongTroIdAndTrangThai(
+                roomId, com.example.rental.domain.ContractStatus.DANG_HIEU_LUC);
+        if (active == null || active.isEmpty()) return 1;
+        Contract contract = active.get(0);
+        if (contract.getKhachThue() == null) return 1;
+        int count = 1;
+        if (contract.getKhachThue().getDanhSachNguoiOCung() != null) {
+            count += contract.getKhachThue().getDanhSachNguoiOCung().size();
         }
-        try {
-            List<Tenant> tenants = tenantRepository.findByPhongTroId(roomId);
-            if (!tenants.isEmpty()) {
-                int total = 0;
-                for (Tenant t : tenants) {
-                    total += 1;
-                    if (t.getDanhSachNguoiOCung() != null) {
-                        total += t.getDanhSachNguoiOCung().size();
-                    }
-                }
-                return Math.max(total, 1);
-            }
-        } catch (Exception ignored) {
-        }
-        return 1;
+        return count;
+    }
+
+    // ====================================================================
+    //  Helpers
+    // ====================================================================
+
+    private String generateMaHoaDon() {
+        long count = invoiceRepository.count();
+        return "HD" + String.format("%05d", count + 1);
+    }
+
+    private LocalDate calculateDefaultDueDate(LocalDate kyHoaDon) {
+        if (kyHoaDon == null) return LocalDate.now().plusDays(5);
+        return kyHoaDon.plusDays(5);
     }
 
     private void sendInvoiceNotification(Invoice invoice) {
-        try {
-            Contract contract = invoice.getHopDong();
-            Tenant tenant = contract != null ? contract.getKhachThue() : null;
-            Room room = contract != null ? contract.getPhongTro() : null;
-
-            if (tenant == null || tenant.getEmail() == null || tenant.getEmail().isBlank()) {
-                log.warn("Khong the gui email: khach thue hoac email trong");
-                return;
-            }
-
-            String roomLabel = room != null
-                    ? room.getMaPhong() + (room.getNhaTro() != null ? " - " + room.getNhaTro().getTenTro() : "")
-                    : "-";
-            String tenantName = tenant.getHoTen() != null ? tenant.getHoTen() : "Quy khach";
-            String month = invoice.getKyHoaDon() != null ? invoice.getKyHoaDon().format(MONTH_FMT) : "-";
-            String dueDate = invoice.getHanThanhToan() != null ? invoice.getHanThanhToan().format(DATE_FMT) : "-";
-            String total = invoice.getTongTien() != null ? MONEY_FMT.format(invoice.getTongTien()) + " VND" : "0 VND";
-            String viewUrl = vnPayConfig.getPublicBaseUrl() + "/api/invoices/" + invoice.getId() + "/pdf";
-            String payUrl = vnPayConfig.getPublicBaseUrl() + "/pay/" + invoice.getMaHoaDon();
-
-            String html = String.format(
-                    "<div style=\"font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 24px; color: #111827;\">"
-                            + "<h2 style=\"color: #80001C; margin-bottom: 8px;\">SmartRental</h2>"
-                            + "<p style=\"color: #6B7280; margin-top: 0;\">He thong quan ly nha tro thong minh</p>"
-                            + "<hr style=\"border: 0; border-top: 1px solid #E5E7EB; margin: 16px 0;\"/>"
-                            + "<p>Xin chao <b>%s</b>,</p>"
-                            + "<p>Hoa don cho thang <b>%s</b> cua phong <b>%s</b> co han thanh toan vao ngay <b>%s</b> voi tong tien <b>%s</b>.</p>"
-                            + "<p>Vui long truy cap cac lien ket ben duoi de xem chi tiet va thanh toan hoa don:</p>"
-                            + "<p style=\"margin: 16px 0;\"><a href=\"%s\" style=\"display:inline-block;padding:10px 18px;background:#1F2937;color:#fff;text-decoration:none;border-radius:8px;margin-right:8px;\">Lien ket xem hoa don</a>"
-                            + "<a href=\"%s\" style=\"display:inline-block;padding:10px 18px;background:#80001C;color:#fff;text-decoration:none;border-radius:8px;\">Thanh toan ngay</a></p>"
-                            + "<p style=\"color: #6B7280; font-size: 13px;\">Ma hoa don: <b>%s</b></p>"
-                            + "<hr style=\"border: 0; border-top: 1px solid #E5E7EB; margin: 24px 0 12px;\"/>"
-                            + "<p style=\"color: #6B7280; font-size: 12px;\">Tran trong,<br/>Doi ngu SmartRental</p>"
-                            + "</div>",
-                    tenantName, month, roomLabel, dueDate, total, viewUrl, payUrl, invoice.getMaHoaDon()
-            );
-
-            String subject = "[SmartRental] Hoa don tien thue " + month + " - " + invoice.getMaHoaDon();
-            emailService.sendInvoiceEmail(tenant.getEmail(), subject, html);
-        } catch (MessagingException e) {
-            log.error("Loi gui email hoa don: {}", e.getMessage());
-        } catch (Exception e) {
-            log.error("Loi khi gui thong bao hoa don: {}", e.getMessage());
+        if (invoice == null) {
+            log.warn("[InvoiceEmail] invoice is null, skip sending");
+            return;
         }
+
+        Contract contract = invoice.getHopDong();
+        if (contract == null) {
+            log.warn("[InvoiceEmail] invoice {} has no contract, skip sending", invoice.getMaHoaDon());
+            return;
+        }
+        if (contract.getKhachThue() == null) {
+            log.warn("[InvoiceEmail] invoice {} contract has no tenant, skip sending", invoice.getMaHoaDon());
+            return;
+        }
+
+        Tenant tenant = contract.getKhachThue();
+        String tenantEmail = tenant.getEmail();
+        if (tenantEmail == null || tenantEmail.isBlank()) {
+            log.warn("[InvoiceEmail] invoice {} tenant {} has no email, skip sending",
+                    invoice.getMaHoaDon(), tenant.getHoTen());
+            return;
+        }
+
+        Room room = contract.getPhongTro();
+        String propertyName = (room != null && room.getNhaTro() != null) ? room.getNhaTro().getTenTro() : "-";
+
+        Map<String, String> vars = new LinkedHashMap<>();
+        vars.put("invoice_code", invoice.getMaHoaDon() != null ? invoice.getMaHoaDon() : "");
+        vars.put("tenant_name", tenant.getHoTen() != null ? tenant.getHoTen() : "");
+        vars.put("room", room != null ? room.getMaPhong() : "-");
+        vars.put("property", propertyName);
+        vars.put("month", invoice.getKyHoaDon() != null ? invoice.getKyHoaDon().format(MONTH_FMT) : "");
+        vars.put("rent_amount", invoice.getTienPhong() != null ? formatMoney(invoice.getTienPhong()) : "0");
+        vars.put("due_date", invoice.getHanThanhToan() != null ? invoice.getHanThanhToan().format(DATE_FMT) : "-");
+        vars.put("amount", invoice.getTongTien() != null ? formatMoney(invoice.getTongTien()) : "0");
+
+        String baseUrl = vnPayConfig.getPublicBaseUrl();
+        if (baseUrl == null || baseUrl.isBlank()) {
+            baseUrl = "http://localhost:8080";
+        }
+        vars.put("invoice_url", baseUrl + "/api/invoices/public/" + invoice.getMaHoaDon() + "/pdf");
+        vars.put("payment_url", baseUrl + "/pay/" + invoice.getMaHoaDon());
+
+        // Electric
+        if (invoice.getChiSoDienCu() != null && invoice.getChiSoDienMoi() != null) {
+            int electricQty = Math.max(0, invoice.getChiSoDienMoi() - invoice.getChiSoDienCu());
+            vars.put("electric_reading", String.valueOf(electricQty));
+            vars.put("electric_price", invoice.getGiaDien() != null ? formatMoney(invoice.getGiaDien()) : "0");
+            vars.put("electric_amount", invoice.getGiaDien() != null
+                    ? formatMoney(invoice.getGiaDien().multiply(BigDecimal.valueOf(electricQty))) : "0");
+        } else {
+            vars.put("electric_reading", "0");
+            vars.put("electric_price", "0");
+            vars.put("electric_amount", "0");
+        }
+
+        // Water
+        String waterAmountStr = "0";
+        if (invoice.getKieuTinhNuoc() == com.example.rental.domain.WaterCalculationType.CHI_SO
+                && invoice.getChiSoNuocCu() != null && invoice.getChiSoNuocMoi() != null) {
+            int waterQty = Math.max(0, invoice.getChiSoNuocMoi() - invoice.getChiSoNuocCu());
+            if (invoice.getGiaNuoc() != null) {
+                waterAmountStr = formatMoney(invoice.getGiaNuoc().multiply(BigDecimal.valueOf(waterQty)));
+            }
+        } else if (invoice.getGiaNuoc() != null) {
+            waterAmountStr = formatMoney(invoice.getGiaNuoc());
+        }
+        vars.put("water_amount", waterAmountStr);
+
+        // Services detail
+        StringBuilder servicesDetail = new StringBuilder();
+        for (InvoiceServiceItem item : invoice.getDanhSachDichVu()) {
+            if (item == null) continue;
+            String name = item.getTenDichVu() != null ? item.getTenDichVu() : "";
+            BigDecimal thanhTien = item.getThanhTien() != null ? item.getThanhTien() : BigDecimal.ZERO;
+            String kieuTinh = item.getKieuTinh() != null ? item.getKieuTinh() : "";
+            servicesDetail.append(name).append(": ").append(formatMoney(thanhTien))
+                    .append(" (").append(kieuTinh).append(")\n");
+        }
+        vars.put("services_detail", servicesDetail.length() > 0 ? servicesDetail.toString().trim() : "Khong co");
+
+        log.info("[InvoiceEmail] Sending invoice email for {} to {} (invoice: {})",
+                tenant.getHoTen(), tenantEmail, invoice.getMaHoaDon());
+        emailTemplateService.sendWithTemplate("NHAC_THANH_TOAN", tenantEmail, vars);
+        log.info("[InvoiceEmail] Invoice email sent successfully for {}", invoice.getMaHoaDon());
+    }
+
+    private String formatMoney(BigDecimal value) {
+        if (value == null) return "0";
+        return value.setScale(0, RoundingMode.HALF_UP).toPlainString();
     }
 }
